etapa4/y.output
   0  $accept : p $end

   1  p : programa

   2  programa : decl_global programa
   3           | def_funcao programa
   4           |

   5  decl_global : decl_var ';'
   6              | decl_vetor ';'

   7  decl_var : KW_DECLARE TK_IDENTIFIER ':' tipo_var

   8  decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'

   9  tipo_var : KW_INTEGER
  10           | KW_FLOATING
  11           | KW_BOOLEAN
  12           | KW_CHARACTER

  13  def_funcao : TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando ';'

  14  lista_parametros : lista_param_nao_vazia
  15                   |

  16  lista_param_nao_vazia : parametro ',' lista_param_nao_vazia
  17                        | parametro

  18  parametro : TK_IDENTIFIER ':' tipo_var

  19  comando : bloco_comando
  20          | controle_fluxo
  21          | atribuicao
  22          | input
  23          | output
  24          | return
  25          |

  26  bloco_comando : '{' seq_comando '}'

  27  seq_comando : comando
  28              | comando ';' seq_comando

  29  atribuicao : TK_IDENTIFIER '=' expressao
  30             | TK_IDENTIFIER '[' expressao ']' '=' expressao

  31  input : KW_INPUT TK_IDENTIFIER

  32  output : KW_OUTPUT lista_expr_nao_vazia

  33  lista_expr_nao_vazia : expressao ',' lista_expr_nao_vazia
  34                       | expressao

  35  return : KW_RETURN expressao

  36  controle_fluxo : KW_IF '(' expressao ')' KW_THEN comando
  37                 | KW_IF '(' expressao ')' KW_THEN comando KW_ELSE comando
  38                 | KW_WHILE '(' expressao ')' comando
  39                 | KW_DO comando KW_WHILE '(' expressao ')'

  40  expressao : TK_IDENTIFIER
  41            | TK_IDENTIFIER '[' expressao ']'
  42            | LIT_INTEGER
  43            | LIT_FLOATING
  44            | LIT_FALSE
  45            | LIT_TRUE
  46            | LIT_CHARACTER
  47            | LIT_STRING
  48            | expressao '+' expressao
  49            | expressao '-' expressao
  50            | expressao '*' expressao
  51            | expressao '/' expressao
  52            | expressao '<' expressao
  53            | expressao '>' expressao
  54            | '(' expressao ')'
  55            | expressao OPERATOR_LE expressao
  56            | expressao OPERATOR_GE expressao
  57            | expressao OPERATOR_EQ expressao
  58            | expressao OPERATOR_NE expressao
  59            | expressao OPERATOR_AND expressao
  60            | expressao OPERATOR_OR expressao
  61            | TK_IDENTIFIER '(' lista_expressoes ')'

  62  lista_expressoes : lista_expr_nao_vazia
  63                   |

state 0
	$accept : . p $end  (0)
	programa : .  (4)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 4

	p  goto 3
	decl_var  goto 4
	decl_vetor  goto 5
	def_funcao  goto 6
	decl_global  goto 7
	programa  goto 8


state 1
	decl_var : KW_DECLARE . TK_IDENTIFIER ':' tipo_var  (7)
	decl_vetor : KW_DECLARE . TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']'  (8)

	TK_IDENTIFIER  shift 9
	.  error


state 2
	def_funcao : TK_IDENTIFIER . ':' tipo_var '(' lista_parametros ')' comando ';'  (13)

	':'  shift 10
	.  error


state 3
	$accept : p . $end  (0)

	$end  accept


state 4
	decl_global : decl_var . ';'  (5)

	';'  shift 11
	.  error


state 5
	decl_global : decl_vetor . ';'  (6)

	';'  shift 12
	.  error


state 6
	programa : def_funcao . programa  (3)
	programa : .  (4)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 4

	decl_var  goto 4
	decl_vetor  goto 5
	def_funcao  goto 6
	decl_global  goto 7
	programa  goto 13


state 7
	programa : decl_global . programa  (2)
	programa : .  (4)

	KW_DECLARE  shift 1
	TK_IDENTIFIER  shift 2
	$end  reduce 4

	decl_var  goto 4
	decl_vetor  goto 5
	def_funcao  goto 6
	decl_global  goto 7
	programa  goto 14


state 8
	p : programa .  (1)

	.  reduce 1


state 9
	decl_var : KW_DECLARE TK_IDENTIFIER . ':' tipo_var  (7)
	decl_vetor : KW_DECLARE TK_IDENTIFIER . ':' tipo_var '[' LIT_INTEGER ']'  (8)

	':'  shift 15
	.  error


state 10
	def_funcao : TK_IDENTIFIER ':' . tipo_var '(' lista_parametros ')' comando ';'  (13)

	KW_INTEGER  shift 16
	KW_FLOATING  shift 17
	KW_BOOLEAN  shift 18
	KW_CHARACTER  shift 19
	.  error

	tipo_var  goto 20


state 11
	decl_global : decl_var ';' .  (5)

	.  reduce 5


state 12
	decl_global : decl_vetor ';' .  (6)

	.  reduce 6


state 13
	programa : def_funcao programa .  (3)

	.  reduce 3


state 14
	programa : decl_global programa .  (2)

	.  reduce 2


state 15
	decl_var : KW_DECLARE TK_IDENTIFIER ':' . tipo_var  (7)
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' . tipo_var '[' LIT_INTEGER ']'  (8)

	KW_INTEGER  shift 16
	KW_FLOATING  shift 17
	KW_BOOLEAN  shift 18
	KW_CHARACTER  shift 19
	.  error

	tipo_var  goto 21


state 16
	tipo_var : KW_INTEGER .  (9)

	.  reduce 9


state 17
	tipo_var : KW_FLOATING .  (10)

	.  reduce 10


state 18
	tipo_var : KW_BOOLEAN .  (11)

	.  reduce 11


state 19
	tipo_var : KW_CHARACTER .  (12)

	.  reduce 12


state 20
	def_funcao : TK_IDENTIFIER ':' tipo_var . '(' lista_parametros ')' comando ';'  (13)

	'('  shift 22
	.  error


state 21
	decl_var : KW_DECLARE TK_IDENTIFIER ':' tipo_var .  (7)
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var . '[' LIT_INTEGER ']'  (8)

	'['  shift 23
	';'  reduce 7


state 22
	def_funcao : TK_IDENTIFIER ':' tipo_var '(' . lista_parametros ')' comando ';'  (13)
	lista_parametros : .  (15)

	TK_IDENTIFIER  shift 24
	')'  reduce 15

	parametro  goto 25
	lista_parametros  goto 26
	lista_param_nao_vazia  goto 27


state 23
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' . LIT_INTEGER ']'  (8)

	LIT_INTEGER  shift 28
	.  error


state 24
	parametro : TK_IDENTIFIER . ':' tipo_var  (18)

	':'  shift 29
	.  error


state 25
	lista_param_nao_vazia : parametro . ',' lista_param_nao_vazia  (16)
	lista_param_nao_vazia : parametro .  (17)

	','  shift 30
	')'  reduce 17


state 26
	def_funcao : TK_IDENTIFIER ':' tipo_var '(' lista_parametros . ')' comando ';'  (13)

	')'  shift 31
	.  error


state 27
	lista_parametros : lista_param_nao_vazia .  (14)

	.  reduce 14


state 28
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER . ']'  (8)

	']'  shift 32
	.  error


state 29
	parametro : TK_IDENTIFIER ':' . tipo_var  (18)

	KW_INTEGER  shift 16
	KW_FLOATING  shift 17
	KW_BOOLEAN  shift 18
	KW_CHARACTER  shift 19
	.  error

	tipo_var  goto 33


state 30
	lista_param_nao_vazia : parametro ',' . lista_param_nao_vazia  (16)

	TK_IDENTIFIER  shift 24
	.  error

	parametro  goto 25
	lista_param_nao_vazia  goto 34


state 31
	def_funcao : TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' . comando ';'  (13)
	comando : .  (25)

	KW_IF  shift 35
	KW_WHILE  shift 36
	KW_DO  shift 37
	KW_INPUT  shift 38
	KW_RETURN  shift 39
	KW_OUTPUT  shift 40
	TK_IDENTIFIER  shift 41
	'{'  shift 42
	';'  reduce 25

	controle_fluxo  goto 43
	input  goto 44
	output  goto 45
	return  goto 46
	atribuicao  goto 47
	comando  goto 48
	bloco_comando  goto 49


state 32
	decl_vetor : KW_DECLARE TK_IDENTIFIER ':' tipo_var '[' LIT_INTEGER ']' .  (8)

	.  reduce 8


state 33
	parametro : TK_IDENTIFIER ':' tipo_var .  (18)

	.  reduce 18


state 34
	lista_param_nao_vazia : parametro ',' lista_param_nao_vazia .  (16)

	.  reduce 16


state 35
	controle_fluxo : KW_IF . '(' expressao ')' KW_THEN comando  (36)
	controle_fluxo : KW_IF . '(' expressao ')' KW_THEN comando KW_ELSE comando  (37)

	'('  shift 50
	.  error


state 36
	controle_fluxo : KW_WHILE . '(' expressao ')' comando  (38)

	'('  shift 51
	.  error


37: shift/reduce conflict (shift 36, reduce 25) on KW_WHILE
state 37
	controle_fluxo : KW_DO . comando KW_WHILE '(' expressao ')'  (39)
	comando : .  (25)

	KW_IF  shift 35
	KW_WHILE  shift 36
	KW_DO  shift 37
	KW_INPUT  shift 38
	KW_RETURN  shift 39
	KW_OUTPUT  shift 40
	TK_IDENTIFIER  shift 41
	'{'  shift 42

	controle_fluxo  goto 43
	input  goto 44
	output  goto 45
	return  goto 46
	atribuicao  goto 47
	comando  goto 52
	bloco_comando  goto 49


state 38
	input : KW_INPUT . TK_IDENTIFIER  (31)

	TK_IDENTIFIER  shift 53
	.  error


state 39
	return : KW_RETURN . expressao  (35)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 62


state 40
	output : KW_OUTPUT . lista_expr_nao_vazia  (32)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 63
	lista_expr_nao_vazia  goto 64


state 41
	atribuicao : TK_IDENTIFIER . '=' expressao  (29)
	atribuicao : TK_IDENTIFIER . '[' expressao ']' '=' expressao  (30)

	'['  shift 65
	'='  shift 66
	.  error


state 42
	bloco_comando : '{' . seq_comando '}'  (26)
	comando : .  (25)

	KW_IF  shift 35
	KW_WHILE  shift 36
	KW_DO  shift 37
	KW_INPUT  shift 38
	KW_RETURN  shift 39
	KW_OUTPUT  shift 40
	TK_IDENTIFIER  shift 41
	'{'  shift 42
	';'  reduce 25
	'}'  reduce 25

	controle_fluxo  goto 43
	input  goto 44
	output  goto 45
	return  goto 46
	atribuicao  goto 47
	comando  goto 67
	seq_comando  goto 68
	bloco_comando  goto 49


state 43
	comando : controle_fluxo .  (20)

	.  reduce 20


state 44
	comando : input .  (22)

	.  reduce 22


state 45
	comando : output .  (23)

	.  reduce 23


state 46
	comando : return .  (24)

	.  reduce 24


state 47
	comando : atribuicao .  (21)

	.  reduce 21


state 48
	def_funcao : TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando . ';'  (13)

	';'  shift 69
	.  error


state 49
	comando : bloco_comando .  (19)

	.  reduce 19


state 50
	controle_fluxo : KW_IF '(' . expressao ')' KW_THEN comando  (36)
	controle_fluxo : KW_IF '(' . expressao ')' KW_THEN comando KW_ELSE comando  (37)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 70


state 51
	controle_fluxo : KW_WHILE '(' . expressao ')' comando  (38)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 71


state 52
	controle_fluxo : KW_DO comando . KW_WHILE '(' expressao ')'  (39)

	KW_WHILE  shift 72
	.  error


state 53
	input : KW_INPUT TK_IDENTIFIER .  (31)

	.  reduce 31


state 54
	expressao : TK_IDENTIFIER .  (40)
	expressao : TK_IDENTIFIER . '[' expressao ']'  (41)
	expressao : TK_IDENTIFIER . '(' lista_expressoes ')'  (61)

	'['  shift 73
	'('  shift 74
	KW_ELSE  reduce 40
	KW_WHILE  reduce 40
	OPERATOR_LE  reduce 40
	OPERATOR_GE  reduce 40
	OPERATOR_EQ  reduce 40
	OPERATOR_NE  reduce 40
	OPERATOR_AND  reduce 40
	OPERATOR_OR  reduce 40
	'<'  reduce 40
	'>'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	'*'  reduce 40
	'/'  reduce 40
	';'  reduce 40
	']'  reduce 40
	')'  reduce 40
	','  reduce 40
	'}'  reduce 40


state 55
	expressao : LIT_INTEGER .  (42)

	.  reduce 42


state 56
	expressao : LIT_FLOATING .  (43)

	.  reduce 43


state 57
	expressao : LIT_FALSE .  (44)

	.  reduce 44


state 58
	expressao : LIT_TRUE .  (45)

	.  reduce 45


state 59
	expressao : LIT_CHARACTER .  (46)

	.  reduce 46


state 60
	expressao : LIT_STRING .  (47)

	.  reduce 47


state 61
	expressao : '(' . expressao ')'  (54)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 75


state 62
	return : KW_RETURN expressao .  (35)
	expressao : expressao . '+' expressao  (48)
	expressao : expressao . '-' expressao  (49)
	expressao : expressao . '*' expressao  (50)
	expressao : expressao . '/' expressao  (51)
	expressao : expressao . '<' expressao  (52)
	expressao : expressao . '>' expressao  (53)
	expressao : expressao . OPERATOR_LE expressao  (55)
	expressao : expressao . OPERATOR_GE expressao  (56)
	expressao : expressao . OPERATOR_EQ expressao  (57)
	expressao : expressao . OPERATOR_NE expressao  (58)
	expressao : expressao . OPERATOR_AND expressao  (59)
	expressao : expressao . OPERATOR_OR expressao  (60)

	OPERATOR_LE  shift 76
	OPERATOR_GE  shift 77
	OPERATOR_EQ  shift 78
	OPERATOR_NE  shift 79
	OPERATOR_AND  shift 80
	OPERATOR_OR  shift 81
	'<'  shift 82
	'>'  shift 83
	'+'  shift 84
	'-'  shift 85
	'*'  shift 86
	'/'  shift 87
	KW_ELSE  reduce 35
	KW_WHILE  reduce 35
	';'  reduce 35
	'}'  reduce 35


state 63
	lista_expr_nao_vazia : expressao . ',' lista_expr_nao_vazia  (33)
	lista_expr_nao_vazia : expressao .  (34)
	expressao : expressao . '+' expressao  (48)
	expressao : expressao . '-' expressao  (49)
	expressao : expressao . '*' expressao  (50)
	expressao : expressao . '/' expressao  (51)
	expressao : expressao . '<' expressao  (52)
	expressao : expressao . '>' expressao  (53)
	expressao : expressao . OPERATOR_LE expressao  (55)
	expressao : expressao . OPERATOR_GE expressao  (56)
	expressao : expressao . OPERATOR_EQ expressao  (57)
	expressao : expressao . OPERATOR_NE expressao  (58)
	expressao : expressao . OPERATOR_AND expressao  (59)
	expressao : expressao . OPERATOR_OR expressao  (60)

	OPERATOR_LE  shift 76
	OPERATOR_GE  shift 77
	OPERATOR_EQ  shift 78
	OPERATOR_NE  shift 79
	OPERATOR_AND  shift 80
	OPERATOR_OR  shift 81
	'<'  shift 82
	'>'  shift 83
	'+'  shift 84
	'-'  shift 85
	'*'  shift 86
	'/'  shift 87
	','  shift 88
	KW_ELSE  reduce 34
	KW_WHILE  reduce 34
	';'  reduce 34
	')'  reduce 34
	'}'  reduce 34


state 64
	output : KW_OUTPUT lista_expr_nao_vazia .  (32)

	.  reduce 32


state 65
	atribuicao : TK_IDENTIFIER '[' . expressao ']' '=' expressao  (30)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 89


state 66
	atribuicao : TK_IDENTIFIER '=' . expressao  (29)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 90


state 67
	seq_comando : comando .  (27)
	seq_comando : comando . ';' seq_comando  (28)

	';'  shift 91
	'}'  reduce 27


state 68
	bloco_comando : '{' seq_comando . '}'  (26)

	'}'  shift 92
	.  error


state 69
	def_funcao : TK_IDENTIFIER ':' tipo_var '(' lista_parametros ')' comando ';' .  (13)

	.  reduce 13


state 70
	controle_fluxo : KW_IF '(' expressao . ')' KW_THEN comando  (36)
	controle_fluxo : KW_IF '(' expressao . ')' KW_THEN comando KW_ELSE comando  (37)
	expressao : expressao . '+' expressao  (48)
	expressao : expressao . '-' expressao  (49)
	expressao : expressao . '*' expressao  (50)
	expressao : expressao . '/' expressao  (51)
	expressao : expressao . '<' expressao  (52)
	expressao : expressao . '>' expressao  (53)
	expressao : expressao . OPERATOR_LE expressao  (55)
	expressao : expressao . OPERATOR_GE expressao  (56)
	expressao : expressao . OPERATOR_EQ expressao  (57)
	expressao : expressao . OPERATOR_NE expressao  (58)
	expressao : expressao . OPERATOR_AND expressao  (59)
	expressao : expressao . OPERATOR_OR expressao  (60)

	OPERATOR_LE  shift 76
	OPERATOR_GE  shift 77
	OPERATOR_EQ  shift 78
	OPERATOR_NE  shift 79
	OPERATOR_AND  shift 80
	OPERATOR_OR  shift 81
	'<'  shift 82
	'>'  shift 83
	'+'  shift 84
	'-'  shift 85
	'*'  shift 86
	'/'  shift 87
	')'  shift 93
	.  error


state 71
	controle_fluxo : KW_WHILE '(' expressao . ')' comando  (38)
	expressao : expressao . '+' expressao  (48)
	expressao : expressao . '-' expressao  (49)
	expressao : expressao . '*' expressao  (50)
	expressao : expressao . '/' expressao  (51)
	expressao : expressao . '<' expressao  (52)
	expressao : expressao . '>' expressao  (53)
	expressao : expressao . OPERATOR_LE expressao  (55)
	expressao : expressao . OPERATOR_GE expressao  (56)
	expressao : expressao . OPERATOR_EQ expressao  (57)
	expressao : expressao . OPERATOR_NE expressao  (58)
	expressao : expressao . OPERATOR_AND expressao  (59)
	expressao : expressao . OPERATOR_OR expressao  (60)

	OPERATOR_LE  shift 76
	OPERATOR_GE  shift 77
	OPERATOR_EQ  shift 78
	OPERATOR_NE  shift 79
	OPERATOR_AND  shift 80
	OPERATOR_OR  shift 81
	'<'  shift 82
	'>'  shift 83
	'+'  shift 84
	'-'  shift 85
	'*'  shift 86
	'/'  shift 87
	')'  shift 94
	.  error


state 72
	controle_fluxo : KW_DO comando KW_WHILE . '(' expressao ')'  (39)

	'('  shift 95
	.  error


state 73
	expressao : TK_IDENTIFIER '[' . expressao ']'  (41)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 96


state 74
	expressao : TK_IDENTIFIER '(' . lista_expressoes ')'  (61)
	lista_expressoes : .  (63)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	')'  reduce 63

	expressao  goto 63
	lista_expressoes  goto 97
	lista_expr_nao_vazia  goto 98


state 75
	expressao : expressao . '+' expressao  (48)
	expressao : expressao . '-' expressao  (49)
	expressao : expressao . '*' expressao  (50)
	expressao : expressao . '/' expressao  (51)
	expressao : expressao . '<' expressao  (52)
	expressao : expressao . '>' expressao  (53)
	expressao : '(' expressao . ')'  (54)
	expressao : expressao . OPERATOR_LE expressao  (55)
	expressao : expressao . OPERATOR_GE expressao  (56)
	expressao : expressao . OPERATOR_EQ expressao  (57)
	expressao : expressao . OPERATOR_NE expressao  (58)
	expressao : expressao . OPERATOR_AND expressao  (59)
	expressao : expressao . OPERATOR_OR expressao  (60)

	OPERATOR_LE  shift 76
	OPERATOR_GE  shift 77
	OPERATOR_EQ  shift 78
	OPERATOR_NE  shift 79
	OPERATOR_AND  shift 80
	OPERATOR_OR  shift 81
	'<'  shift 82
	'>'  shift 83
	'+'  shift 84
	'-'  shift 85
	'*'  shift 86
	'/'  shift 87
	')'  shift 99
	.  error


state 76
	expressao : expressao OPERATOR_LE . expressao  (55)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 100


state 77
	expressao : expressao OPERATOR_GE . expressao  (56)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 101


state 78
	expressao : expressao OPERATOR_EQ . expressao  (57)

	TK_IDENTIFIER  shift 54
	LIT_INTEGER  shift 55
	LIT_FLOATING  shift 56
	LIT_FALSE  shift 57
	LIT_TRUE  shift 58
	LIT_CHARACTER  shift 59
	LIT_STRING  shift 60
	'('  shift 61
	.  error

	expressao  goto 102


state 79
	expressao : expressao OPERATOR_NE . expressao  (58)
